--- a/index.html
+++ b/index.html
@@ -1,36 +1,19 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>About by szweibel</title>
+---
+layout: default
+title: Welcome
+---
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>About</h1>
-        <p>Testing</p>
-
-
-        <p class="view"><a href="https://github.com/szweibel">View My GitHub Profile</a></p>
-
-      </header>
-      <section>
-        <h3>
-<a name="testing" class="anchor" href="#testing"><span class="octicon octicon-link"></span></a>TESTING</h3>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+<div class="span8">
+    <div>
+        <h3 class='head'>
+            Librarian <strong><a style='text-decoration: underline' href="#" rel="tooltip3" data-original-title="An Aristotelian term that connotes both motion and completion. It has been translated as 'being at work, staying oneself.'">εντελέχεια</a>
+            </h3></strong>
+        <p>
+            I am a librarian doing work in Emerging Technologies at Hunter College, CUNY. I'm currently studying Digital Humanities at the CUNY Graduate Center, and I like to work on digital projects tha increase access to library collections. I've written a <a href="https://github.com/szweibel" style='text-decoration: underline'>number of programs</a>.
+        </p>
+        <p>
+        My primary research interests include the use of technology to improve library services, and library assessment. I also enjoy microcomputing, using devices
+        like the Arduino and Raspberry Pi.
+        </p>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
-</html>
+</div>
