know thy shelf presentation

--- a/presentations/knowshelf.html
+++ b/presentations/knowshelf.html
@@ -64,7 +64,7 @@
                         <p>Uses:</p>
                             <ul>
                                 <li>Toll collection (FastPass)</li>
-                                <li>Tracking animals & People</li>
+                                <li>Tracking animals & people</li>
                                 <li>Tracking inventory</li>
                             </ul>
                     </section>
@@ -92,10 +92,15 @@
                     <section>
                         <p>And so...</p>
                         <h2 class="fragment fade-out">Know Thy Shelf</h2>
-                        <img src="/images/knowthyshelf.png">
                         <a href="#" class="navigate-down">
                             ↓
                         </a>
+                    </section>
+                    <section>
+                        <img src="/images/knowthyshelf.png">
+                        <a href="#" class="navigate-down">
+                            ↓
+                        </a></p>
                     </section>
                     <section>
                         <h2>Collection Creation Process</h2>
