know thy shelf presentation

--- a/knowshelf.html
+++ b/knowshelf.html
@@ -91,11 +91,16 @@
                 <section>
                     <section>
                         <p>And so...</p>
-                        <h2 class="fragment fade-out">Know Thy Shelf</h2>
-                        <img src="/images/knowthyshelf.png">
+                        <h2>Know Thy Shelf</h2>
                         <a href="#" class="navigate-down">
                             ↓
                         </a>
+                    </section>
+                    <section>
+                        <img src="/images/knowthyshelf.png">
+                        <a href="#" class="navigate-down">
+                            ↓
+                        </a></p>
                     </section>
                     <section>
                         <h2>Collection Creation Process</h2>
