know thy shelf presentation

--- a/knowshelf.html
+++ b/knowshelf.html
@@ -61,15 +61,15 @@
                         <img src="/images/rfid.jpg">
                     </section>
                     <section>
-                        <p>Uses:</p>
+                        <h2>Uses:</h2>
                             <ul>
-                                <li>Toll collection (FastPass)</li>
+                                <li>Toll collection (EasyPass)</li>
                                 <li>Tracking animals & People</li>
                                 <li>Tracking inventory</li>
                             </ul>
                     </section>
                     <section>
-                        <p>Advantages over barcodes</p>
+                        <h2>Advantages Over Barcodes</h2>
                             <ul>
                                 <li>Doesn't require line-of-sight</li>
                                 <li>Can read more than one at a time</li>
@@ -83,7 +83,6 @@
                         <p>Inventory</p>
                     </section>
                     <section>
-                        <p>Keeping holdings in order</p>
                         <p>If a book is out of place, it may as well not exist</p>
                     </section>
                 </section>
@@ -100,18 +99,28 @@
                         <img src="/images/knowthyshelf.png">
                     </section>
                     <section>
-                        <h2>Collection Creation Process</h2>
-                        <p>For each item:</p>
-                        <p>Scan item barcode</p>
-                        <p>Title, Call Number, ISBN automatically added</p>
-                        <p>Tested: average 45 seconds per book</p>
+                        <h2>Process</h2>
+                        <p>Scan barcode</p>
+                        <br/>
+                        <p>Automatically added:</p>
+                        <ol>
+                            <li>Title</li>
+                            <li>Call Number</li>
+                            <li>ISBN</li>
+                        </ol>
+                        <br/>
+                        <br/>
+                        <p>Apply RFID tag</p>
+                        <br/>
+                        <p>Average 45 seconds per book</p>
+
                         <a href="#" class="navigate-down">
                             ↓
                         </a></p>
                     </section>
                     <section>
-                        <h2>Bookshelf Scanning process</h2>
-                        <p>Use RFID reader (Blutetooth)</p>
+                        <h2>Bookshelf Scanning Process</h2>
+                        <p>Use RFID reader (Bluetooth)</p>
                         <p>Computer/Phone/Tablet</p>
                         <p>Scan books without opening them</p>
                         <p>Less than 50 seconds per shelf</p>
@@ -121,16 +130,20 @@
                         <p>Graphical representation of library shelves</p>
                         <p>Automatically determines:</p>
                         <ul>
-                            <li>shelf order</li>
-                            <li>lost items</li>
+                            <li>Shelf order</li>
+                            <li>Lost items</li>
                         </ul>
                     </section>
                 </section>
 
-                <section>
+                <!-- <section>
                     <h2>DEMONSTRATION</h2>
+                </section> -->
+                <section>
+                    <h2>Current Status</h2>
+                    <p>Ongoing pilot program</p>
+                    <p>1500 books in Know Thy Shelf</p>
                 </section>
-
                 <!-- <section>
                     <h2>Useful?</h2>
                 </section>
