know thy shelf presentation

--- a/knowshelf.html
+++ b/knowshelf.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title>Use of Catalog APIs</title>
+        <title>Know Thy Shelf</title>
 
         <meta name="description" content="Know Thy Shelf">
         <meta name="author" content="Stephen Zweibel">
@@ -164,7 +164,7 @@
  -->
                 <section data-state="blackout">
                     <h1>THE END</h1>
-                    <h3>BY Stephen Zweibel</h3>
+                    <h3>BY <a href="https://github.com/szweibel" target="_blank">Stephen Zweibel</a></h3>
                 </section>
 
             </div>
