know thy shelf presentation

--- a/knowshelf.html
+++ b/knowshelf.html
@@ -42,8 +42,7 @@
                     <h1>Know Thy Shelf</h1>
                     <h3>A Bookshelf-Reading App for Libraries</h3>
                     <p>
-                        <small>by <a href="https://github.com/szweibel">Stephen Zweibel</a>
-                        </small>
+                        <small><a href="https://github.com/szweibel" target="_blank">Stephen Zweibel</a></small>
                     </p>
                 </section>
 
