know thy shelf presentation

--- a/knowshelf.html
+++ b/knowshelf.html
@@ -134,36 +134,14 @@
                         </ul>
                     </section>
                 </section>
-
-                <!-- <section>
-                    <h2>DEMONSTRATION</h2>
-                </section> -->
                 <section>
                     <h2>Current Status</h2>
                     <p>Ongoing pilot program</p>
                     <p>1500 books in Know Thy Shelf</p>
                 </section>
-                <!-- <section>
-                    <h2>Useful?</h2>
-                </section>
-
-                <section>
-                    <section>
-                        <h2>Simplify Inventory!</h2>
-                        <p><img width='600' height='420' src="images/knowthyshelf.png"></p>
-                        <p><a href="https://github.com/szweibel/know-thy-shelf">(Know Thy Shelf)</a></p>
-                        <a href="#" class="navigate-down">
-                            ↓
-                        </a>
-                    </section>
-                    <section>
-                        <h2>Create a Whole New Catalog!</h2>
-                    </section>
-                </section>
- -->
                 <section data-state="blackout">
                     <h1>THE END</h1>
-                    <h3>BY <a href="https://github.com/szweibel" target="_blank">Stephen Zweibel</a></h3>
+                    <h3>BY Stephen Zweibel</h3>
                 </section>
 
             </div>
