know thy shelf presentation

--- a/knowshelf.html
+++ b/knowshelf.html
@@ -63,7 +63,7 @@
                         <h2>Uses:</h2>
                             <ul>
                                 <li>Toll collection (EasyPass)</li>
-                                <li>Tracking animals & People</li>
+                                <li>Tracking animals & people</li>
                                 <li>Tracking inventory</li>
                             </ul>
                     </section>
