--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@ Stephen Zweibel & Zachary B. Lane (2012): <a href="http://www.tandfonline.com/do
 by Evaluating Circulation Activity Data at Columbia University Libraries</a>, The Serials Librarian, 63:1,
 17-27
 </div>
-<h2>Presentations</h2>
+<h2>Selected Presentations</h2>
 <h4><a href="/presentation.html">Web APIs and the Library Catalog</a></h4>
 <h4>RFID Dreaming</h4>
 <div class="prezi-player">
