--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Welcome
 ---
 
-<div class="span8">
+<div class="col-md-8">
     <div>
         <!-- <h3 class='head'>
             Librarian <strong><a style='text-decoration: underline' href="#" rel="tooltip3" data-original-title="An Aristotelian term that connotes both motion and completion. It has been translated as 'being at work, staying oneself.'">εντελέχεια</a>
