--- a/index.html
+++ b/index.html
@@ -4,16 +4,5 @@ title: Welcome
 ---
 
 <div class="col-md-8">
-    <div>
-        <!-- <h3 class='head'>
-            Librarian <strong><a style='text-decoration: underline' href="#" rel="tooltip3" data-original-title="An Aristotelian term that connotes both motion and completion. It has been translated as 'being at work, staying oneself.'">εντελέχεια</a>
-            </h3></strong> -->
-        <p>
-            I am a librarian doing work in Emerging Technologies at Hunter College, CUNY. I'm currently studying Digital Humanities at the CUNY Graduate Center, and I like to work on digital projects tha increase access to library collections. I've written a <a href="https://github.com/szweibel" style='text-decoration: underline'>number of programs</a>.
-        </p>
-        <p>
-        My primary research interests include the use of technology to improve library services, and library assessment. I also enjoy microcomputing, using devices
-        like the Arduino and Raspberry Pi.
-        </p>
-    </div>
+    <div>Hey!</div>
 </div>
