--- a/about.html
+++ b/about.html
@@ -101,14 +101,14 @@ Research<br/>
 <h3 id="specialprojects">Special Projects</h3>
 
 <ul>
-<li>Analyzed Columbia University’s raw circulation data to create
+<li>Analyzed Columbia University's raw circulation data to create
 longitudinal study of user behavior, presented analysis and
 interpretation to Access Services Coordinating Committee and Avery
 staff</li>
 <li>Wrote a macro automating catalog record deletion, saving hundreds of
 man-hours for Hunter College</li>
 <li>Invented and developed an open-source RFID inventory solution for
-libraries using C♯ and a programmable microcontroller. Currently
+libraries using C&#9839; and a programmable microcontroller. Currently
 implementing a pilot program with funding from Hunter College.</li>
 </ul>
 
@@ -123,24 +123,24 @@ University Libraries, The Serials Librarian, 63:1, 17&#8211;27.</li>
 <h3 id="skills">Skills</h3>
 <dl>
 <dt>Programming:</dt>
-<dd>Python, JavaScript, Clojure, PHP, C♯</dd>
+<dd>Python, JavaScript, Clojure, PHP, C&#9839;</dd>
 
-<dt>Web Technologies: </dt>
+<dt>Web Technologies:</dt>
 <dd>XML, JSON, CSS</dd>
 
-<dt>CMSs and Digital Repositories: </dt>
+<dt>CMSs and Digital Repositories:</dt>
 <dd>WordPress, Drupal, Omeka, Blackboard</dd>
 
-<dt>Database Management: </dt>
+<dt>Database Management:</dt>
 <dd>MySQL, PostgreSQL, Access</dd>
 
-<dt>Applications: </dt>
+<dt>Applications:</dt>
 <dd>MS Office, Adobe Photoshop, Dreamweaver</dd>
 
-<dt>Integrated Library Systems (ILS): </dt>
+<dt>Integrated Library Systems (ILS):</dt>
 <dd>WorldCAT, Voyager, ALEPH</dd>
 
-<dt>Cataloging: </dt>
+<dt>Cataloging:</dt>
 <dd>Dublin Core, RDA, MODS, MARC21, AACR2</dd>
 
 <dt>Languages: </dt>
