--- a/index.html
+++ b/index.html
@@ -4,5 +4,11 @@ title: Welcome
 ---
 
 <div class="col-md-8">
-    <div>Hey!</div>
+    <div>
+      {% for post in site.posts %}
+          <h3>
+          <a href="{{ post.url }}">{{ post.title }}</a></h3>
+          <p>{{ post.excerpt }}</p>
+      {% endfor %}
+    </div>
 </div>
