--- a/presentations.html
+++ b/presentations.html
@@ -1,18 +1,11 @@
 ---
 layout: default
-title: Projects
+title: Presentations
 ---
 
 <div>
-<h2>Papers</h2>
-<div>
-Stephen Zweibel & Zachary B. Lane (2012): <a href="http://www.tandfonline.com/doi/abs/10.1080/0361526X.2012.687850#preview">Probing the Effects of Policy Changes
-by Evaluating Circulation Activity Data at Columbia University Libraries</a>, The Serials Librarian, 63:1,
-17-27
-</div>
 <h2>Selected Presentations</h2>
-<h4><a href="/presentation.html">Web APIs and the Library Catalog</a></h4>
-<h4>RFID Dreaming</h4>
+<!-- <h4>RFID Dreaming</h4>
 <div class="prezi-player">
   <style type="text/css" media="screen">.prezi-player { width: 550px; } .prezi-player-links { text-align: center; }</style>
   <object id="prezi_mfcquunqjb2b" name="prezi_mfcquunqjb2b" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="550" height="400">
@@ -22,8 +15,11 @@ by Evaluating Circulation Activity Data at Columbia University Libraries</a>, Th
     <param name="bgcolor" value="#ffffff"/>
     <param name="flashvars" value="prezi_id=mfcquunqjb2b&amp;lock_to_path=1&amp;color=ffffff&amp;autoplay=no&amp;autohide_ctrls=0"/>
     <embed id="preziEmbed_mfcquunqjb2b" name="preziEmbed_mfcquunqjb2b" src="http://prezi.com/bin/preziloader.swf" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="550" height="400" bgcolor="#ffffff" flashvars="prezi_id=mfcquunqjb2b&amp;lock_to_path=1&amp;color=ffffff&amp;autoplay=no&amp;autohide_ctrls=0"/>
-</object>
-<h2>Projects</h2>
-<p><a href="https://github.com/szweibel">Check out my GitHub page</a></p>
-</div>
+</object> -->
+{% for presentation in data.presentations %}
+    <h3>
+    <a href="{{ presentation.link }}">{{ presentation.title }}</a></h3>
+    <p>{{ presentation.content }}</p>
+{% endfor %}
+
 </div>
