--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@ by Evaluating Circulation Activity Data at Columbia University Libraries</a>, Th
 </div>
  -->
 <h2>Projects</h2>
-% for project in site.data.projects %}
+{% for project in site.data.projects %}
 <div>
     <h3>
     <a href="{{ project.link }}">{{ project.title }}</a>
