--- a/presentations.html
+++ b/presentations.html
@@ -17,9 +17,12 @@ title: Presentations
     <embed id="preziEmbed_mfcquunqjb2b" name="preziEmbed_mfcquunqjb2b" src="http://prezi.com/bin/preziloader.swf" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="550" height="400" bgcolor="#ffffff" flashvars="prezi_id=mfcquunqjb2b&amp;lock_to_path=1&amp;color=ffffff&amp;autoplay=no&amp;autohide_ctrls=0"/>
 </object> -->
 {% for presentation in site.data.presentations %}
+<div>
     <h3>
-    <a href="{{ presentation.link }}">{{ presentation.title }}</a></h3>
+    <a href="{{ presentation.link }}">{{ presentation.title }}</a>
+    </h3>
     <p>{{ presentation.content }}</p>
+</div>
 {% endfor %}
 
 </div>
