--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@ by Evaluating Circulation Activity Data at Columbia University Libraries</a>, Th
 {% for project in site.data.projects %}
 <div class="media">
   <a class="pull-left" href="project.link">
-    <img class="media-object" src="{{ project.image }}" alt="{{ project.title }}">
+    <img class="media-object" src="images/me.jpg" alt="{{ project.title }}">
   </a>
   <div class="media-body">
     <h4 class="media-heading">{{ project.title }}</h4>
