--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@ by Evaluating Circulation Activity Data at Columbia University Libraries</a>, Th
 <h2>Projects</h2>
 {% for project in site.data.projects %}
 <div class="media">
-  <a class="pull-left" href="project.link">
+  <a class="pull-left thumbnail" href="project.link">
     <img class="media-object" src="images/me.jpg" alt="{{ project.title }}">
   </a>
   <div class="media-body">
