--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ title: About
 reference questions&#8217; frequency, length, nature, and other data, to
 inform personnel and resource management</li>
 <li>Built and implemented a cloud-based RFID solution to enhance
-accuracy in library inventory </li>
+accuracy in library inventory</li>
 <li>Provide reference and research service to graduates and
 undergraduates at the Health Professions Library</li>
 <li>Assist students by appointment in navigating academic databases and
@@ -35,9 +35,9 @@ strategy, Medline, CINAHL, APA, Refworks, Zotero</li>
 <ul>
 <li>Provide reference service to students, faculty, and staff at Bobst
 Library</li>
-<li>Answer virtual reference questions via email, IM, and text </li>
+<li>Answer virtual reference questions via email, IM, and text</li>
 <li>Created original catalog records for the Tamiment Library collection
-of rare radical literature </li>
+of rare radical literature</li>
 <li>Generated original and complex copy catalog records of works written
 in English, French, German, Spanish, &amp; Portuguese</li>
 </ul>
@@ -46,11 +46,11 @@ in English, French, German, Spanish, &amp; Portuguese</li>
 <em>Nov. 2009-Aug. 2010</em></p>
 
 <ul>
-<li>Designed project to reclaim ‘lost’ items in collections, wrote
+<li>Designed project to reclaim 'lost' items in collections, wrote
 instructional documents for implementation</li>
 <li>Generated original and copy catalog records for the Gillette
 collection of rare 17th and 18th century pamphlets</li>
-<li>Cataloged the Avery Library’s collection of architectural literature</li>
+<li>Cataloged the Avery Library's collection of architectural literature</li>
 </ul>
 
 <p><strong>Queens Library</strong> (Broadway Branch): Page<br/>
@@ -143,7 +143,7 @@ University Libraries, The Serials Librarian, 63:1, 17&#8211;27.</li>
 <dt>Cataloging:</dt>
 <dd>Dublin Core, RDA, MODS, MARC21, AACR2</dd>
 
-<dt>Languages: </dt>
+<dt>Languages:</dt>
 <dd>French (Intermediate), Ancient Greek (Reading)</dd>
 </dl>
 
