--- a/presentations.html
+++ b/presentations.html
@@ -20,9 +20,9 @@ title: Presentations
 <div class="media">
   <a class="pull-left thumbnail" href="{{ presentation.link }}">
     <img class="media-object" src="images/me.jpg" style='width: 150px; height: 150px;' alt="{{ presentation.title }}">
-  <div class="media-body">
-    <h3 class="media-heading">{{ presentation.title }}</h3>
   </a>
+  <div class="media-body">
+    <a href="{{ presentation.link }}"><h3 class="media-heading">{{ presentation.title }}</h3></a>
     {{ presentation.content }}
   </div>
 </div>
