--- a/projects.html
+++ b/projects.html
@@ -16,9 +16,9 @@ by Evaluating Circulation Activity Data at Columbia University Libraries</a>, Th
 <div class="media">
   <a class="pull-left thumbnail" href="{{ project.link }}">
     <img class="media-object" src="images/me.jpg" style='width: 150px; height: 150px;' alt="{{ project.title }}">
-  <div class="media-body">
-    <h3 class="media-heading">{{ project.title }}</h3>
   </a>
+  <div class="media-body">
+    <a href="{{ project.link }}"></a><h3 class="media-heading">{{ project.title }}</h3>
     {{ project.content }}
   </div>
 </div>
