--- a/projects.html
+++ b/projects.html
@@ -15,10 +15,10 @@ by Evaluating Circulation Activity Data at Columbia University Libraries</a>, Th
 {% for project in site.data.projects %}
 <div class="media">
   <a class="pull-left thumbnail" href="{{ project.link }}">
-    <img class="media-object" src="images/me.jpg" style='width: 150px; height: 150px;' alt="{{ project.title }}">
+    <img class="media-object" src="{{ project.image }}" style='width: 150px; height: 150px;' alt="{{ project.title }}">
   </a>
   <div class="media-body">
-    <a href="{{ project.link }}"></a><h3 class="media-heading">{{ project.title }}</h3>
+    <a href="{{ project.github }}"><h3 class="media-heading">{{ project.title }}</h3></a>
     {{ project.content }}
   </div>
 </div>
