--- a/presentations/knowshelf.html
+++ b/presentations/knowshelf.html
@@ -38,7 +38,7 @@
             <!-- Any section element inside of this container is displayed as a slide -->
             <div class="slides">
 
-                <section>
+                <section data-state="cobalt">
                     <h1>Know Thy Shelf</h1>
                     <h3>A Bookshelf-Reading App for Libraries</h3>
                     <p>
