--- a/presentations.html
+++ b/presentations.html
@@ -1,10 +1,9 @@
 ---
 layout: default
-title: Presentations
+title: Selected Presentations
 ---
 
 <div>
-<h2>Selected Presentations</h2>
 <!-- <h4>RFID Dreaming</h4>
 <div class="prezi-player">
   <style type="text/css" media="screen">.prezi-player { width: 550px; } .prezi-player-links { text-align: center; }</style>
