--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: About
 ---
 
 <div>
-<p>srzweibel (at) gmail.com</p>
+<p>srzweibel (at) gmail (dot) com</p>
 
 <h3 id="professionalexperience">Professional Experience</h3>
 
