--- a/about.html
+++ b/about.html
@@ -15,10 +15,10 @@ title: About
 <em>Sep. 2010-Oct. 2012</em></p>
 
 <ul>
-<li>Planned, built, and deployed a mobile library catalog for CUNY+</li>
+<li>Planned, built, and deployed a mobile library catalog for CUNY Libraries</li>
 <li>Developed web application to help libraries track and analyze
 reference questions&#8217; frequency, length, nature, and other data, to
-inform personnel and resource management</li>
+inform personnel and resource management (Currently used at Hunter College, and in libraries in South Carolina, and Nigeria)</li>
 <li>Built and implemented a cloud-based RFID solution to enhance
 accuracy in library inventory</li>
 <li>Provide reference and research service to graduates and
@@ -30,7 +30,7 @@ strategy, Medline, CINAHL, APA, Refworks, Zotero</li>
 </ul>
 
 <p><strong>New York University</strong>: Adjunct Reference/Cataloging/Virtual Reference Librarian<br/>
-<em>Sep. 2010-Present</em></p>
+<em>Sep. 2010-Oct. 2012</em></p>
 
 <ul>
 <li>Provide reference service to students, faculty, and staff at Bobst
@@ -105,8 +105,8 @@ Research<br/>
 longitudinal study of user behavior, presented analysis and
 interpretation to Access Services Coordinating Committee and Avery
 staff</li>
-<li>Wrote a macro automating catalog record deletion, saving hundreds of
-man-hours for Hunter College</li>
+<li>Wrote macros automating catalog record deletion/modification, credited for saving hundreds of
+man-hours for Hunter College cataloging department</li>
 <li>Invented and developed an open-source RFID inventory solution for
 libraries using C&#9839; and a programmable microcontroller. Currently
 implementing a pilot program with funding from Hunter College.</li>
