--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@ title: About
 
 <ul>
 <li>Planned, built, and deployed a mobile library catalog for CUNY Libraries</li>
-<li>Developed web application to help libraries track and analyze
+<li>Developed web application to track and analyze
 reference questions&#8217; frequency, length, nature, and other data, to
-inform personnel and resource management (Currently used at Hunter College, and in libraries in South Carolina, and Nigeria)</li>
+inform personnel and resource management (Currently used at Hunter College, and in libraries in South Carolina and Nigeria)</li>
 <li>Built and implemented a cloud-based RFID solution to enhance
 accuracy in library inventory</li>
 <li>Provide reference and research service to graduates and
