--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ title: About
 
 <h3 id="professionalexperience">Professional Experience</h3>
 
-<p><strong>Hunter College</strong>: Visiting Instructor working in Reference and Emerging Technologies<br/>
+<p><strong>Hunter College</strong>: Visiting Lecturer working in Reference and Emerging Technologies<br/>
 <em>Oct. 2012-Present</em> </p>
 
 <p>Adjunct Reference Librarian<br/>
@@ -33,9 +33,9 @@ strategy, Medline, CINAHL, APA, Refworks, Zotero</li>
 <em>Sep. 2010-Oct. 2012</em></p>
 
 <ul>
-<li>Provide reference service to students, faculty, and staff at Bobst
+<li>Provided reference service to students, faculty, and staff at Bobst
 Library</li>
-<li>Answer virtual reference questions via email, IM, and text</li>
+<li>Answered virtual reference questions via email, IM, and text</li>
 <li>Created original catalog records for the Tamiment Library collection
 of rare radical literature</li>
 <li>Generated original and complex copy catalog records of works written
@@ -112,12 +112,13 @@ libraries using C&#9839; and a programmable microcontroller. Currently
 implementing a pilot program with funding from Hunter College.</li>
 </ul>
 
-<h3 id="publishedpapers">Published Papers</h3>
+<h3 id="papers">Publications &amp; Presentations</h3>
 
 <ul>
 <li>Stephen Zweibel &amp; Zachary B. Lane (2012): Probing the Effects of
 Policy Changes by Evaluating Circulation Activity Data at Columbia
 University Libraries, The Serials Librarian, 63:1, 17&#8211;27.</li>
+<li>Zweibel, S., Davis, R. C., Tidal, J., &amp; Verbovetskaya, A. (2013, December 6). Life with Pi: Microcomputing in academia. Presentation at CUNY 12th Annual IT Conference, New York, NY. Slides available at http://robincamille.com/jj/cunyit/. Handout available at http://robincamille.com/jj/cunyit/handout.pdf</li>
 </ul>
 
 <h3 id="skills">Skills</h3>
