--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@ implementing a pilot program with funding from Hunter College.</li>
 <li>Stephen Zweibel &amp; Zachary B. Lane (2012): Probing the Effects of
 Policy Changes by Evaluating Circulation Activity Data at Columbia
 University Libraries, The Serials Librarian, 63:1, 17&#8211;27.</li>
-<li>Zweibel, S., Davis, R. C., Tidal, J., &amp; Verbovetskaya, A. (2013, December 6). Life with Pi: Microcomputing in academia. Presentation at CUNY 12th Annual IT Conference, New York, NY. Slides available at http://robincamille.com/jj/cunyit/. Handout available at http://robincamille.com/jj/cunyit/handout.pdf</li>
+<li>Zweibel, S., Davis, R. C., Tidal, J., &amp; Verbovetskaya, A. (2013, December 6). Life with Pi: Microcomputing in academia. Presentation at CUNY 12th Annual IT Conference, New York, NY. Handout available at http://robincamille.com/jj/cunyit/handout.pdf.</li>
 </ul>
 
 <h3 id="skills">Skills</h3>
