--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@ essay writing, constructive class discussion, and oral examination</li>
 </ul>
 
 <h3 id="teaching">Teaching</h3>
-
+<h4>Curricular</h4>
 <ul>
 <li><p>Library Research sessions for Nursing 702: Nursing Research<br/>
 <em>Fall 2011, Spring-Fall 2013</em></p></li>
@@ -97,9 +97,16 @@ Nursing Science<br/>
 Research<br/>
 <em>Spring 2010, Spring-Fall 2013</em></p></li>
 </ul>
+<h4>Professional Development Workshops</h4>
+<ul>
+<li>Python &amp; MARC: Basics of Programming to Simplify &amp; Automate Workflows<br/>
+<em>Sept. 2013</em></li>
+<li>Library Web APIs: Learn Javascript &amp; HTML to Take Advantage of Available Metadata<br/>
+<em>Fall 2013</em></li>
+<li></li>
+</ul>
 
 <h3 id="specialprojects">Special Projects</h3>
-
 <ul>
 <li>Analyzed Columbia University's raw circulation data to create
 longitudinal study of user behavior, presented analysis and
@@ -115,9 +122,11 @@ implementing a pilot program with funding from Hunter College.</li>
 <h3 id="papers">Publications &amp; Presentations</h3>
 
 <ul>
-<li>Stephen Zweibel &amp; Zachary B. Lane (2012): Probing the Effects of
+<li>Zweibel, S., &amp; Lane, Z. (2012). Probing the Effects of
 Policy Changes by Evaluating Circulation Activity Data at Columbia
-University Libraries, The Serials Librarian, 63:1, 17&#8211;27.</li>
+University Libraries, The Serials Librarian, 63(1), 17&#8211;27.</li>
+<li>Zweibel, S. (2013). Augur for Reference Desk Statistics. Presented at METRO Reference SIG, September 2013, New York, NY.</li>
+<li>Zweibel, S. (2013). Building a Library Catalog API. Presented at METRO Code4Lib SIG, April 2013, New York, NY.</li>
 <li>Zweibel, S., Davis, R. C., Tidal, J., &amp; Verbovetskaya, A. (2013, December 6). Life with Pi: Microcomputing in academia. Presentation at CUNY 12th Annual IT Conference, New York, NY. Handout available at http://robincamille.com/jj/cunyit/handout.pdf.</li>
 </ul>
 
@@ -138,8 +147,8 @@ University Libraries, The Serials Librarian, 63:1, 17&#8211;27.</li>
 <dt>Applications:</dt>
 <dd>MS Office, Adobe Photoshop, Dreamweaver</dd>
 
-<dt>Integrated Library Systems (ILS):</dt>
-<dd>WorldCAT, Voyager, ALEPH</dd>
+<dt>Library Management Systems</dt>
+<dd>Ex Libris Aleph, OCLC Connexion, OCLC EZproxy, Voyager</dd>
 
 <dt>Cataloging:</dt>
 <dd>Dublin Core, RDA, MODS, MARC21, AACR2</dd>
