--- a/about.html
+++ b/about.html
@@ -99,10 +99,10 @@ Research<br/>
 </ul>
 <h4>Professional Development Workshops</h4>
 <ul>
+<li>Library Web APIs: Learn Javascript &amp; HTML to Take Advantage of Available Metadata<br/>
+<em>April 2013</em></li>
 <li>Python &amp; MARC: Basics of Programming to Simplify &amp; Automate Workflows<br/>
 <em>Sept. 2013</em></li>
-<li>Library Web APIs: Learn Javascript &amp; HTML to Take Advantage of Available Metadata<br/>
-<em>Fall 2013</em></li>
 </ul>
 
 <h3 id="specialprojects">Special Projects</h3>
