--- a/presentations/DHBox.html
+++ b/presentations/DHBox.html
@@ -4,9 +4,12 @@
 
 	<head>
 		<meta charset="utf-8" />
-		<title>DHBox</title>
+		<title>DH Box: A Turnkey DH Laboratory</title>
 		<meta name="description"
-			content="A presentation on Microcomputing With Digital Humanities" />
+			content="A presentation on DH Box" />
+		<meta name="author" content="Cailean Cooney" />
+		<meta name="author" content="Harlan Kellaway" />
+		<meta name="author" content="Gioia Stevens" />
 		<meta name="author" content="Stephen Zweibel" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -30,15 +33,114 @@
 		<div class="reveal">
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
+				<!-- Intro -->
 				<section>
-					<h1>DH Box</h1>
-					<h2>By Stephen Zweibel</h2>
+					<h1>DH Box: A Turnkey Digital Humanities Laboratory</h1>
+					<p>
+						<small><a href="https://twitter.com/_csmcc">Cailean Cooney</a>, <a href="https://twitter.com/DigiHumanatee">Harlan Kellaway</a>, <a href="https://twitter.com/gioiastevens" target="_blank"
+								>Gioia Stevens</a>, &amp; <a href="https://github.com/szweibel">Stephen Zweibel</a>
+						</small>
+					</p>
 				</section>
-				<section>
-					<img src="images/raspberrypi-schematic.jpg">
+				<section data-state="sunset">
+					<section>
+						<h1>DH: Digital Humanities</h1>
+						<p>Using computational methods for humanistic inquiry</p>
+						<p>
+							<a href="#" class="navigate-right"> &rarr; </a>
+						</p>
+					</section>
 				</section>
-				<section>
-					<img src="images/cloud.png">
+				<section data-state="cobalt">
+					<section>
+						<h1>DH Tools</h1>
+						<p>Hold promise for humanities inquiry</p>
+						<p>Require specialized knowledge to install, configure, and use</p>
+						<p>
+							<a href="#" class="navigate-down"> &darr; </a>
+						</p>
+					</section>
+					<section>
+						<h1>Applications</h1>
+						<ul>
+							<li>Text Mining</li>
+							<li>Topic Modeling</li>
+							<li>Digital Repositories</li>
+							<li>Interactive Exhibits</li>
+							<li>Data Visualization</li>
+						</ul>
+						<p>
+							<a href="#" class="navigate-down"> &darr; </a>
+						</p>
+					</section>
+					<section>
+						<h1>Barriers</h1>
+						<p>Humanities scholars and teachers may lack technical expertise</p>
+						<p>Resources (including hardware, technical suppport, institutional backing) are often limited</p>
+						<p>
+							<a href="#" class="navigate-down"> &darr; </a>
+						</p>
+					</section>
+					<section>
+						<img src="DH_BOX_LOGO_BLACK.png" style='max-height: 400px;max-width: 400px'>
+						<ul>
+							<li>Pre-installed, pre-configured Linux server</li>
+							<li>In 'the cloud'</li>
+							<li>Gold-standard DH Tools</li>
+							<li>Clear, simple documentation</li>
+							<li>Get one ready in an hour</li>
+						</ul>
+						<p>
+							<a href="#" class="navigate-down"> &darr; </a>
+						</p>
+					</section>
+					<section>
+						<h1>Tools</h1>
+						<ul>
+							<li>Natural Language Toolkit</li>
+							<li>Stanford NER: Named Entity Recognition</li>
+							<li>MALLET: MAchine Learning for LanguagE Toolkit</li>
+							<li>Omeka</li>
+							<li>Gephi</li>
+							<li>Many more</li>
+						</ul>
+					</section>
+					<section>
+						<h1>Inclusion Criteria</h1>
+						<p>Open source</p>
+						<p>Well documented</p>
+						<p>Suggested by the community</p>
+					</section>
+					<section>
+						<h1>Community</h1>
+						<p>Developers</p>
+						<p>Librarians</p>
+						<p>Teachers</p>
+						<p>Scholars</p>
+						<p>
+							<a href="#" class="navigate-right"> &rarr; </a>
+						</p>
+					</section>
+				</section>
+				<!-- Questions -->
+				<section data-state="blackout">
+					<section>
+						<h1>Questions?</h1>
+						<p>
+							<a href="#" class="navigate-down"> &darr; </a>
+						</p>
+					</section>
+					<section>
+						<img src="DH_BOX_LOGO_WHITE.png" style='max-height: 400px;max-width: 400px'>
+						<p>DH Box <a href="http://twitter.com/DH_Bx">@DH_Box</a></p>
+						<p>Stephen Zweibel <a href="http://twitter.com/zwounds">@stevezweibel</a></p>
+						<p>Cailean Cooney <a href="https://twitter.com/_csmcc">@_csmcc</a></p>
+						<p>Harlan Kellaway <a href="https://twitter.com/DigiHumanatee">@DigiHumanatee</a></p>
+						<p>Gioia Stevens <a href="https://twitter.com/gioiastevens" target="_blank"
+														>@gioiastevens</a></p><br/>
+						<small>Thanks to Professors Matt Gold &amp; Dennis Tenen
+						</small>
+					</section>
 				</section>
 			</div>
 		</div>
