adds dhbox presentation

--- a/presentations/DHBox.html
+++ b/presentations/DHBox.html
@@ -82,7 +82,7 @@
 						</p>
 					</section>
 					<section>
-						<img src="DH_BOX_LOGO_BLACK.png" style='max-height: 400px;max-width: 400px'>
+						<img src="images/DH_BOX_LOGO_BLACK.png" style='max-height: 400px;max-width: 400px'>
 						<ul>
 							<li>Pre-installed, pre-configured Linux server</li>
 							<li>In 'the cloud'</li>
@@ -131,7 +131,7 @@
 						</p>
 					</section>
 					<section>
-						<img src="DH_BOX_LOGO_WHITE.png" style='max-height: 400px;max-width: 400px'>
+						<img src="images/DH_BOX_LOGO_WHITE.png" style='max-height: 400px;max-width: 400px'>
 						<p>DH Box <a href="http://twitter.com/DH_Bx">@DH_Box</a></p>
 						<p>Stephen Zweibel <a href="http://twitter.com/zwounds">@stevezweibel</a></p>
 						<p>Cailean Cooney <a href="https://twitter.com/_csmcc">@_csmcc</a></p>
