adds dhbox presentation

--- a/presentations/DHBox.html
+++ b/presentations/DHBox.html
@@ -104,12 +104,18 @@
 							<li>Gephi</li>
 							<li>Many more</li>
 						</ul>
+						<p>
+							<a href="#" class="navigate-down"> &darr; </a>
+						</p>
 					</section>
 					<section>
 						<h1>Inclusion Criteria</h1>
 						<p>Open source</p>
 						<p>Well documented</p>
 						<p>Suggested by the community</p>
+						<p>
+							<a href="#" class="navigate-down"> &darr; </a>
+						</p>
 					</section>
 					<section>
 						<h1>Community</h1>
