--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title:
       {% for post in paginator.posts %}
           <h3>
           <a href="{{ post.url }}">{{ post.title }}</a></h3>
-          <p>{{ post.excerpt }}</p>
+          <p>{{ post.excerpt }} ...</p>
       {% endfor %}
     </div>
     <!-- Pagination links -->
