--- a/test/index.html
+++ b/test/index.html
@@ -9,6 +9,7 @@ title: Testing
             <input type'text' id='admin'>
             <input type'text' id='users'>
             <input type'text' id='users'>
+            <input name="save" type="submit" value="Save" class="btn btn-success" />
         </form>
     </div>
 </div>
