--- a/test/index.html
+++ b/test/index.html
@@ -6,9 +6,9 @@ title: Testing
 <div class="col-md-10">
     <div>
         <form action="http://66.108.238.228:3000/dhbox" id="dhbox" method="post">
-            <input type'text' id='admin'>
-            <input type'text' id='users'>
-            <input type'text' id='users'>
+            <input type'text' name='admin'>
+            <input type'text' name='users'>
+            <input type'text' name='users'>
             <input name="save" type="submit" value="Save" class="btn btn-success" />
         </form>
     </div>
