--- a/test/index.html
+++ b/test/index.html
@@ -2,14 +2,23 @@
 layout: default
 title: Testing
 ---
+<script type="text/javascript">
+$( document ).ready(function() {
+    $('#dhbox_form').click(function(event){
+        event.preventDefault();
+        var formData = $('#dhbox').serialize();
+        $.post('http://66.108.238.228:3000/dhbox', formData);
+    });
+});
 
+</script>
 <div class="col-md-10">
-    <div>
+    <div id='dhbox_form'>
         <form action="http://66.108.238.228:3000/dhbox" id="dhbox" method="post">
             <input type'text' name='admin'>
             <input type'text' name='users'>
             <input type'text' name='users'>
-            <input name="save" type="submit" value="Save" class="btn btn-success" />
+            <input name="save" id='dhbox_form' type="submit" value="Save" class="btn btn-success" />
         </form>
     </div>
 </div>
