--- a/test/index.html
+++ b/test/index.html
@@ -10,6 +10,7 @@ $( document ).ready(function() {
         var formData = $('#dhbox').serialize();
         console.log(formData);
         $.post('http://54.83.200.29:8080/dhbox', formData);
+        delete window.formData;
     });
 });
 
