--- a/test/index.html
+++ b/test/index.html
@@ -8,8 +8,8 @@ $( document ).ready(function() {
     $('#dhbox_form').click(function(e){
         e.preventDefault();
         var formData = $('#dhbox').serialize();
-        // console.log(formData);
-        $.post('http://54.83.200.29:8080/dhbox', formData);
+        console.log(formData);
+        // $.post('http://54.83.200.29:8080/dhbox', formData);
         // delete window.formData;
     });
 });
