--- a/test/index.html
+++ b/test/index.html
@@ -17,9 +17,9 @@ $( document ).ready(function() {
 <div class="col-md-10">
     <div id='dhbox_form'>
         <form action="http://66.108.238.228:3000/dhbox" id="dhbox" method="post">
-            <input type'text' name='admin'>
-            <input type'text' name='users'>
-            <input type'text' name='users'>
+            <input type'text' name='admin'/>
+            <input type'text' name='users'/>
+            <input type'text' name='users'/>
             <input name="save" id='dhbox_form' type="submit" value="Save" class="btn btn-success" />
         </form>
     </div>
