--- a/test/index.html
+++ b/test/index.html
@@ -20,7 +20,7 @@ $( document ).ready(function() {
             <input type'text' name='admin'/>
             <input type'text' name='users'/>
             <input type'text' name='users'/>
-            <input name="save" id='dhbox_form' type="submit" value="Save" class="btn btn-success" />
         </form>
+            <input name="save" id='dhbox_form' class="btn btn-success" />
     </div>
 </div>
