--- a/test/index.html
+++ b/test/index.html
@@ -15,7 +15,7 @@ $( document ).ready(function() {
 });
 </script>
 <div class="col-md-10">
-    <div id='dhbox_form'>
+    <div>
         <form action="http://66.108.238.228:3000/dhbox" id="the_form" method="post">
             <input type'text' name='admin'/>
             <input type'text' name='users'/>
