--- a/test/index.html
+++ b/test/index.html
@@ -20,8 +20,8 @@ $( document ).ready(function() {
         removeButton.click(function() {
             $(this).parent().remove();
         });
-        fieldWrapper.append(newUser);
-        fieldWrapper.append(removeButton);
+        userWrapper.append(newUser);
+        userWrapper.append(removeButton);
         $("#the_form").append(userWrapper);
     });
 
