--- a/test/index.html
+++ b/test/index.html
@@ -36,8 +36,10 @@ $( document ).ready(function() {
         </div>
 <!--             <input type'text' class='users' name='users'/> -->
     </form>
-            <input name="save" id='dhbox_form_submit' type="submit" value="Save" class="btn btn-success" />
         <div>
             <input type="button" value="Add a user" class="add" id="add" />
+        </div>
+        <div>
+            <input name="save" id='dhbox_form_submit' type="submit" value="Save" class="btn btn-success" />
         </div>
 </div>
