--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,7 @@ $( document ).ready(function() {
     $("#add").click(function() {
         var intId = $("#the_form div").length + 1;
         var userWrapper = $("<div class=\"userwrapper\" id=\"field" + intId + "\"/>");
-        var newUserLabel = $("<label for=\"user" + intId + "\"/>User:</label>");
+        var newUserLabel = $("<label for=\"user" + intId + "\">User:</label>");
         var newUser = $("<input type=\"text\" class=\"fieldname\" id=\"user" + intId + "\" />");
         var removeButton = $("<input type=\"button\" class=\"remove\" value=\"-\" />");
         removeButton.click(function() {
